Add controller tests and simplify service tests, rename columns and shorten field names, getters/setters